--- a/cj.html
+++ b/cj.html
@@ -98,7 +98,7 @@
 
 	<body bgcolor="#ff8247">
 		<div align="center">
-			<h1>抽奖大玩家</h1>
+			<h1>抽奖大玩家.</h1>
 		</div>
 
 		<div class="button" style="left:500px;top:400px;" onclick="fun()">开始</div>
